Soft link QuickLookThumbnailing framework https://bugs.webkit.org/show_bug.cgi?id=210894

Reviewed by Tim Horton.

Soft link QuickLookThumbnailing framework to solve build error.

No new tests. Unnecessary.

* Configurations/WebKit.xcconfig:
* UIProcess/QuickLookThumbnailLoader.mm:
(-[WKQLThumbnailLoadOperation initWithURL:identifier:]):
(-[WKQLThumbnailLoadOperation start]):
* UIProcess/QuickLookThumbnailingSPI.h: Added.
* UIProcess/QuickLookThumbnailingSoftLink.h: Added.
* UIProcess/QuickLookThumbnailingSoftLink.mm: Added.
* WebKit.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/223780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260553 268f45cc-cd09-0410-ab3c-d52691b4dbfc